// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MutArray (s.newArray) > IR snapshot (arrnew/len/arrset/index) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "elem": "uint256",
      "k": "arrnew",
      "length": 0,
      "out": 1,
      "site": 0,
    },
    {
      "a": 1,
      "k": "len",
      "out": 2,
      "site": 1,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 2,
      "type": "uint256",
    },
    {
      "data": {
        "hex": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "kind": "word",
      },
      "k": "const",
      "out": 4,
      "site": 3,
      "type": "uint256",
    },
    {
      "arr": 1,
      "i": 3,
      "k": "arrset",
      "site": 4,
      "value": 4,
    },
    {
      "arr": 1,
      "i": 3,
      "k": "index",
      "out": 5,
      "site": 5,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "arrs",
  "returns": [
    {
      "name": "first",
      "type": "uint256",
      "value": 5,
    },
    {
      "name": "len",
      "type": "uint256",
      "value": 2,
    },
    {
      "name": "all",
      "type": "uint256[]",
      "value": 1,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "debugName": "s.newArray(uint256)",
      "type": "uint256[]",
    },
    {
      "debugName": "s.newArray(uint256).length",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`MutArray (s.newArray) > indexing args arrays via .at() and .length() 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address[]",
    },
  ],
  "body": [
    {
      "a": 0,
      "k": "len",
      "out": 1,
      "site": 0,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 2,
      "site": 1,
      "type": "uint256",
    },
    {
      "arr": 0,
      "i": 2,
      "k": "index",
      "out": 3,
      "site": 2,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "argarr",
  "returns": [
    {
      "name": "n",
      "type": "uint256",
      "value": 1,
    },
    {
      "name": "first",
      "type": "address",
      "value": 3,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address[]",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "address",
    },
  ],
}
`;

exports[`Tuple (s.tuple + field get/set) > a tuple call output decodes into a Tuple handle (field read after decode) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
    {
      "name": "arg1",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "args": [
        1,
      ],
      "fnAbi": {
        "inputs": [
          {
            "name": "tokenId",
            "type": "uint256",
          },
        ],
        "name": "positions",
        "outputs": [
          {
            "components": [
              {
                "name": "liquidity",
                "type": "uint128",
              },
              {
                "name": "owner",
                "type": "address",
              },
            ],
            "name": "",
            "type": "tuple",
          },
        ],
        "selector": "0x99fbab88",
      },
      "k": "call",
      "mode": "strict",
      "outs": [
        2,
      ],
      "site": 0,
      "target": 0,
    },
    {
      "index": 0,
      "k": "field",
      "out": 3,
      "site": 1,
      "tuple": 2,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "getPos",
  "returns": [
    {
      "name": "liquidity",
      "type": "uint128",
      "value": 3,
    },
    {
      "name": "pos",
      "type": {
        "components": [
          {
            "name": "liquidity",
            "type": "uint128",
          },
          {
            "name": "owner",
            "type": "address",
          },
        ],
        "type": "tuple",
      },
      "value": 2,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "args.arg1",
      "type": "uint256",
    },
    {
      "debugName": "s.read(positions)",
      "type": {
        "components": [
          {
            "name": "liquidity",
            "type": "uint128",
          },
          {
            "name": "owner",
            "type": "address",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "type": "uint128",
    },
  ],
}
`;

exports[`Tuple (s.tuple + field get/set) > s.tuple allocates a tuplenew, MSTORE-ing provided members; fields read via field stmt 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x000000000000000000000000000000000000000000000000000000000000002a",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 0,
      "type": "uint128",
    },
    {
      "inits": [
        {
          "index": 0,
          "value": 1,
        },
        {
          "index": 1,
          "value": 0,
        },
      ],
      "k": "tuplenew",
      "out": 2,
      "site": 1,
    },
    {
      "index": 0,
      "k": "field",
      "out": 3,
      "site": 2,
      "tuple": 2,
    },
    {
      "index": 1,
      "k": "field",
      "out": 4,
      "site": 3,
      "tuple": 2,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "mkPos",
  "returns": [
    {
      "name": "liq",
      "type": "uint128",
      "value": 3,
    },
    {
      "name": "owner",
      "type": "address",
      "value": 4,
    },
    {
      "name": "pos",
      "type": {
        "components": [
          {
            "name": "liquidity",
            "type": "uint128",
          },
          {
            "name": "owner",
            "type": "address",
          },
        ],
        "type": "tuple",
      },
      "value": 2,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "type": "uint128",
    },
    {
      "debugName": "s.tuple(liquidity, owner)",
      "type": {
        "components": [
          {
            "name": "liquidity",
            "type": "uint128",
          },
          {
            "name": "owner",
            "type": "address",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "type": "uint128",
    },
    {
      "type": "address",
    },
  ],
}
`;

exports[`all-literal folding > arithmetic, comparison, bool, bitwise, shift, and convert folds collapse to consts 1`] = `
{
  "args": [],
  "body": [
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000000fa",
        "kind": "word",
      },
      "k": "const",
      "out": 0,
      "site": 0,
      "type": "uint8",
    },
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000000ff",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 1,
      "type": "uint8",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000003",
        "kind": "word",
      },
      "k": "const",
      "out": 2,
      "site": 2,
      "type": "uint256",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 3,
      "type": "bool",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 4,
      "site": 4,
      "type": "bool",
    },
    {
      "data": {
        "hex": "0x000000000000000000000000000000000000000000000000000000000000abcd",
        "kind": "word",
      },
      "k": "const",
      "out": 5,
      "site": 5,
      "type": "uint16",
    },
    {
      "data": {
        "hex": "0x000000000000000000000000000000000000000000000000000000000000ab00",
        "kind": "word",
      },
      "k": "const",
      "out": 6,
      "site": 6,
      "type": "uint16",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 7,
      "site": 7,
      "type": "uint8",
    },
    {
      "data": {
        "hex": "0x1122334400000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 8,
      "site": 8,
      "type": "bytes4",
    },
    {
      "data": {
        "hex": "0x2233440000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 9,
      "site": 9,
      "type": "bytes4",
    },
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000000c8",
        "kind": "word",
      },
      "k": "const",
      "out": 10,
      "site": 10,
      "type": "uint256",
    },
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000000c8",
        "kind": "word",
      },
      "k": "const",
      "out": 11,
      "site": 11,
      "type": "uint8",
    },
    {
      "data": {
        "hex": "0xfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff9",
        "kind": "word",
      },
      "k": "const",
      "out": 12,
      "site": 12,
      "type": "int8",
    },
    {
      "data": {
        "hex": "0xfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffd",
        "kind": "word",
      },
      "k": "const",
      "out": 13,
      "site": 13,
      "type": "int8",
    },
    {
      "data": {
        "hex": "0xfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff8",
        "kind": "word",
      },
      "k": "const",
      "out": 14,
      "site": 14,
      "type": "int16",
    },
    {
      "data": {
        "hex": "0xfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffc",
        "kind": "word",
      },
      "k": "const",
      "out": 15,
      "site": 15,
      "type": "int16",
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "folds",
  "returns": [
    {
      "name": "sum",
      "type": "uint8",
      "value": 1,
    },
    {
      "name": "cmp",
      "type": "bool",
      "value": 3,
    },
    {
      "name": "bothWays",
      "type": "bool",
      "value": 4,
    },
    {
      "name": "masked",
      "type": "uint16",
      "value": 6,
    },
    {
      "name": "flipped",
      "type": "uint8",
      "value": 1,
    },
    {
      "name": "shifted",
      "type": "bytes4",
      "value": 9,
    },
    {
      "name": "inverted",
      "type": "bool",
      "value": 3,
    },
    {
      "name": "narrowed",
      "type": "uint8",
      "value": 11,
    },
    {
      "name": "signedDiv",
      "type": "int8",
      "value": 13,
    },
    {
      "name": "signedShr",
      "type": "int16",
      "value": 15,
    },
  ],
  "values": [
    {
      "type": "uint8",
    },
    {
      "type": "uint8",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint16",
    },
    {
      "type": "uint16",
    },
    {
      "type": "uint8",
    },
    {
      "type": "bytes4",
    },
    {
      "type": "bytes4",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint8",
    },
    {
      "type": "int8",
    },
    {
      "type": "int8",
    },
    {
      "type": "int16",
    },
    {
      "type": "int16",
    },
  ],
}
`;

exports[`arithmetic / comparison / bool / bitwise families > IR snapshot 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
    {
      "name": "arg1",
      "type": "uint256",
    },
    {
      "name": "arg2",
      "type": "int8",
    },
  ],
  "body": [
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "add",
      "out": 3,
      "site": 0,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "kind": "word",
      },
      "k": "const",
      "out": 4,
      "site": 1,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 4,
      "k": "bin",
      "op": "sub",
      "out": 5,
      "site": 2,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000002",
        "kind": "word",
      },
      "k": "const",
      "out": 6,
      "site": 3,
      "type": "uint256",
    },
    {
      "a": 6,
      "b": 1,
      "k": "bin",
      "op": "mul",
      "out": 7,
      "site": 4,
    },
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "div",
      "out": 8,
      "site": 5,
    },
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "mod",
      "out": 9,
      "site": 6,
    },
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "lt",
      "out": 10,
      "site": 7,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000064",
        "kind": "word",
      },
      "k": "const",
      "out": 11,
      "site": 8,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 11,
      "k": "bin",
      "op": "gt",
      "out": 12,
      "site": 9,
    },
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "lte",
      "out": 13,
      "site": 10,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 14,
      "site": 11,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 14,
      "k": "bin",
      "op": "gte",
      "out": 15,
      "site": 12,
    },
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "eq",
      "out": 16,
      "site": 13,
    },
    {
      "data": {
        "hex": "0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
        "kind": "word",
      },
      "k": "const",
      "out": 17,
      "site": 14,
      "type": "int8",
    },
    {
      "a": 2,
      "b": 17,
      "k": "bin",
      "op": "neq",
      "out": 18,
      "site": 15,
    },
    {
      "a": 10,
      "b": 12,
      "k": "bin",
      "op": "and",
      "out": 19,
      "site": 16,
    },
    {
      "a": 16,
      "b": 18,
      "k": "bin",
      "op": "or",
      "out": 20,
      "site": 17,
    },
    {
      "a": 19,
      "k": "un",
      "op": "not",
      "out": 21,
      "site": 18,
    },
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000000ff",
        "kind": "word",
      },
      "k": "const",
      "out": 22,
      "site": 19,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 22,
      "k": "bin",
      "op": "bitand",
      "out": 23,
      "site": 20,
    },
    {
      "a": 0,
      "b": 4,
      "k": "bin",
      "op": "bitor",
      "out": 24,
      "site": 21,
    },
    {
      "a": 0,
      "b": 1,
      "k": "bin",
      "op": "bitxor",
      "out": 25,
      "site": 22,
    },
    {
      "a": 0,
      "k": "un",
      "op": "bitnot",
      "out": 26,
      "site": 23,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000008",
        "kind": "word",
      },
      "k": "const",
      "out": 27,
      "site": 24,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 27,
      "k": "bin",
      "op": "shl",
      "out": 28,
      "site": 25,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000004",
        "kind": "word",
      },
      "k": "const",
      "out": 29,
      "site": 26,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 29,
      "k": "bin",
      "op": "shr",
      "out": 30,
      "site": 27,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "ops",
  "returns": [
    {
      "name": "sum",
      "type": "uint256",
      "value": 3,
    },
    {
      "name": "diff",
      "type": "uint256",
      "value": 5,
    },
    {
      "name": "prod",
      "type": "uint256",
      "value": 7,
    },
    {
      "name": "quot",
      "type": "uint256",
      "value": 8,
    },
    {
      "name": "rem",
      "type": "uint256",
      "value": 9,
    },
    {
      "name": "ltc",
      "type": "bool",
      "value": 10,
    },
    {
      "name": "gtc",
      "type": "bool",
      "value": 12,
    },
    {
      "name": "lec",
      "type": "bool",
      "value": 13,
    },
    {
      "name": "gec",
      "type": "bool",
      "value": 15,
    },
    {
      "name": "eqc",
      "type": "bool",
      "value": 16,
    },
    {
      "name": "nec",
      "type": "bool",
      "value": 18,
    },
    {
      "name": "both",
      "type": "bool",
      "value": 19,
    },
    {
      "name": "either",
      "type": "bool",
      "value": 20,
    },
    {
      "name": "nope",
      "type": "bool",
      "value": 21,
    },
    {
      "name": "band",
      "type": "uint256",
      "value": 23,
    },
    {
      "name": "bor",
      "type": "uint256",
      "value": 24,
    },
    {
      "name": "bxor",
      "type": "uint256",
      "value": 25,
    },
    {
      "name": "bnot",
      "type": "uint256",
      "value": 26,
    },
    {
      "name": "left",
      "type": "uint256",
      "value": 28,
    },
    {
      "name": "right",
      "type": "uint256",
      "value": 30,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "debugName": "args.arg1",
      "type": "uint256",
    },
    {
      "debugName": "args.arg2",
      "type": "int8",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "int8",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`cells (s.let) > IR snapshot (cellnew/cellget/cellset) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 0,
      "type": "uint256",
    },
    {
      "cell": 0,
      "init": 1,
      "k": "cellnew",
      "site": 1,
    },
    {
      "cell": 1,
      "init": 0,
      "k": "cellnew",
      "site": 2,
    },
    {
      "cell": 0,
      "k": "cellset",
      "site": 3,
      "value": 0,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000005",
        "kind": "word",
      },
      "k": "const",
      "out": 2,
      "site": 4,
      "type": "uint256",
    },
    {
      "cell": 0,
      "k": "cellset",
      "site": 5,
      "value": 2,
    },
    {
      "cell": 0,
      "k": "cellget",
      "out": 3,
      "site": 6,
    },
    {
      "cell": 1,
      "k": "cellset",
      "site": 7,
      "value": 3,
    },
    {
      "cell": 1,
      "k": "cellget",
      "out": 4,
      "site": 8,
    },
  ],
  "cells": [
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
  "fns": [],
  "irVersion": 1,
  "name": "cells",
  "returns": [
    {
      "name": "snap",
      "type": "uint256",
      "value": 3,
    },
    {
      "name": "last",
      "type": "uint256",
      "value": 4,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`conversions > IR snapshot + result types 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
    {
      "name": "arg1",
      "type": "bytes32",
    },
    {
      "name": "arg2",
      "type": "int128",
    },
  ],
  "body": [
    {
      "a": 0,
      "k": "convert",
      "out": 3,
      "site": 0,
    },
    {
      "a": 3,
      "k": "convert",
      "out": 4,
      "site": 1,
    },
    {
      "a": 2,
      "k": "convert",
      "out": 5,
      "site": 2,
    },
    {
      "a": 2,
      "k": "convert",
      "out": 6,
      "site": 3,
    },
    {
      "a": 0,
      "k": "convert",
      "out": 7,
      "site": 4,
    },
    {
      "a": 1,
      "k": "convert",
      "out": 8,
      "site": 5,
    },
    {
      "a": 1,
      "k": "convert",
      "out": 9,
      "site": 6,
    },
    {
      "a": 0,
      "k": "convert",
      "out": 10,
      "site": 7,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "convs",
  "returns": [
    {
      "name": "narrowed",
      "type": "uint8",
      "value": 3,
    },
    {
      "name": "widened",
      "type": "uint256",
      "value": 4,
    },
    {
      "name": "signed",
      "type": "int256",
      "value": 5,
    },
    {
      "name": "crossed",
      "type": "uint128",
      "value": 6,
    },
    {
      "name": "addr1",
      "type": "address",
      "value": 7,
    },
    {
      "name": "addr2",
      "type": "address",
      "value": 8,
    },
    {
      "name": "asU",
      "type": "uint256",
      "value": 9,
    },
    {
      "name": "asB",
      "type": "bytes32",
      "value": 10,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "debugName": "args.arg1",
      "type": "bytes32",
    },
    {
      "debugName": "args.arg2",
      "type": "int128",
    },
    {
      "type": "uint8",
    },
    {
      "type": "uint256",
    },
    {
      "type": "int256",
    },
    {
      "type": "uint128",
    },
    {
      "type": "address",
    },
    {
      "type": "address",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bytes32",
    },
  ],
}
`;

exports[`env > IR snapshot + out types (address/caller → address, others → uint256) 1`] = `
{
  "args": [],
  "body": [
    {
      "k": "env",
      "op": "address",
      "out": 0,
      "site": 0,
    },
    {
      "k": "env",
      "op": "caller",
      "out": 1,
      "site": 1,
    },
    {
      "k": "env",
      "op": "timestamp",
      "out": 2,
      "site": 2,
    },
    {
      "k": "env",
      "op": "blocknumber",
      "out": 3,
      "site": 3,
    },
    {
      "k": "env",
      "op": "chainid",
      "out": 4,
      "site": 4,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "envs",
  "returns": [
    {
      "name": "self",
      "type": "address",
      "value": 0,
    },
    {
      "name": "caller",
      "type": "address",
      "value": 1,
    },
    {
      "name": "ts",
      "type": "uint256",
      "value": 2,
    },
    {
      "name": "bn",
      "type": "uint256",
      "value": 3,
    },
    {
      "name": "chain",
      "type": "uint256",
      "value": 4,
    },
  ],
  "values": [
    {
      "debugName": "s.env(address)",
      "type": "address",
    },
    {
      "debugName": "s.env(caller)",
      "type": "address",
    },
    {
      "debugName": "s.env(timestamp)",
      "type": "uint256",
    },
    {
      "debugName": "s.env(blocknumber)",
      "type": "uint256",
    },
    {
      "debugName": "s.env(chainid)",
      "type": "uint256",
    },
  ],
}
`;

exports[`eq/neq on memref types (hash equality — #38) > string/bytes: both operands hashed directly, then one word eq/neq — no encode stmt 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "string",
    },
    {
      "name": "arg1",
      "type": "string",
    },
    {
      "name": "arg2",
      "type": "bytes",
    },
    {
      "name": "arg3",
      "type": "bytes",
    },
  ],
  "body": [
    {
      "a": 0,
      "k": "keccak256",
      "out": 4,
      "site": 0,
    },
    {
      "a": 1,
      "k": "keccak256",
      "out": 5,
      "site": 1,
    },
    {
      "a": 4,
      "b": 5,
      "k": "bin",
      "op": "eq",
      "out": 6,
      "site": 2,
    },
    {
      "a": 2,
      "k": "keccak256",
      "out": 7,
      "site": 3,
    },
    {
      "a": 3,
      "k": "keccak256",
      "out": 8,
      "site": 4,
    },
    {
      "a": 7,
      "b": 8,
      "k": "bin",
      "op": "neq",
      "out": 9,
      "site": 5,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "streq",
  "returns": [
    {
      "name": "eq",
      "type": "bool",
      "value": 6,
    },
    {
      "name": "neq",
      "type": "bool",
      "value": 9,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "string",
    },
    {
      "debugName": "args.arg1",
      "type": "string",
    },
    {
      "debugName": "args.arg2",
      "type": "bytes",
    },
    {
      "debugName": "args.arg3",
      "type": "bytes",
    },
    {
      "debugName": ".eq() left operand hash",
      "type": "bytes32",
    },
    {
      "debugName": ".eq() right operand hash",
      "type": "bytes32",
    },
    {
      "type": "bool",
    },
    {
      "debugName": ".neq() left operand hash",
      "type": "bytes32",
    },
    {
      "debugName": ".neq() right operand hash",
      "type": "bytes32",
    },
    {
      "type": "bool",
    },
  ],
}
`;

exports[`integration-shaped recording > E4-shaped script (data-segment literal array, while + cells + break) records valid IR 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
    {
      "name": "arg1",
      "type": "address",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000006400000000000000000000000000000000000000000000000000000000000001f40000000000000000000000000000000000000000000000000000000000000bb80000000000000000000000000000000000000000000000000000000000002710",
        "kind": "data",
      },
      "k": "const",
      "out": 2,
      "site": 0,
      "type": "uint24[]",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 1,
      "type": "address",
    },
    {
      "cell": 0,
      "init": 3,
      "k": "cellnew",
      "site": 2,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 4,
      "site": 3,
      "type": "uint24",
    },
    {
      "cell": 1,
      "init": 4,
      "k": "cellnew",
      "site": 4,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 5,
      "site": 5,
      "type": "uint256",
    },
    {
      "cell": 2,
      "init": 5,
      "k": "cellnew",
      "site": 6,
    },
    {
      "body": [
        {
          "cell": 2,
          "k": "cellget",
          "out": 9,
          "site": 10,
        },
        {
          "arr": 2,
          "i": 9,
          "k": "index",
          "out": 10,
          "site": 11,
        },
        {
          "data": {
            "hex": "0x0000000000000000000000001f98431c8ad98523631ae4a59f267346ea31f984",
            "kind": "word",
          },
          "k": "const",
          "out": 11,
          "site": 12,
          "type": "address",
        },
        {
          "args": [
            0,
            1,
            10,
          ],
          "fnAbi": {
            "inputs": [
              {
                "name": "a",
                "type": "address",
              },
              {
                "name": "b",
                "type": "address",
              },
              {
                "name": "fee",
                "type": "uint24",
              },
            ],
            "name": "getPool",
            "outputs": [
              {
                "name": "",
                "type": "address",
              },
            ],
            "selector": "0x1698ee82",
          },
          "k": "call",
          "mode": "strict",
          "outs": [
            12,
          ],
          "site": 13,
          "target": 11,
        },
        {
          "a": 12,
          "b": 3,
          "k": "bin",
          "op": "neq",
          "out": 13,
          "site": 14,
        },
        {
          "cond": 13,
          "else": [],
          "k": "if",
          "site": 18,
          "then": [
            {
              "cell": 0,
              "k": "cellset",
              "site": 15,
              "value": 12,
            },
            {
              "cell": 1,
              "k": "cellset",
              "site": 16,
              "value": 10,
            },
            {
              "k": "break",
              "site": 17,
            },
          ],
        },
        {
          "cell": 2,
          "k": "cellget",
          "out": 14,
          "site": 19,
        },
        {
          "data": {
            "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
            "kind": "word",
          },
          "k": "const",
          "out": 15,
          "site": 20,
          "type": "uint256",
        },
        {
          "a": 14,
          "b": 15,
          "k": "bin",
          "op": "add",
          "out": 16,
          "site": 21,
        },
        {
          "cell": 2,
          "k": "cellset",
          "site": 22,
          "value": 16,
        },
      ],
      "cond": 8,
      "header": [
        {
          "cell": 2,
          "k": "cellget",
          "out": 6,
          "site": 7,
        },
        {
          "a": 2,
          "k": "len",
          "out": 7,
          "site": 8,
        },
        {
          "a": 6,
          "b": 7,
          "k": "bin",
          "op": "lt",
          "out": 8,
          "site": 9,
        },
      ],
      "k": "while",
      "site": 23,
    },
    {
      "cell": 0,
      "k": "cellget",
      "out": 17,
      "site": 24,
    },
    {
      "cell": 1,
      "k": "cellget",
      "out": 18,
      "site": 25,
    },
  ],
  "cells": [
    {
      "type": "address",
    },
    {
      "type": "uint24",
    },
    {
      "type": "uint256",
    },
  ],
  "fns": [],
  "irVersion": 1,
  "name": "firstPool",
  "returns": [
    {
      "name": "pool",
      "type": "address",
      "value": 17,
    },
    {
      "name": "fee",
      "type": "uint24",
      "value": 18,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "args.arg1",
      "type": "address",
    },
    {
      "type": "uint24[]",
    },
    {
      "type": "address",
    },
    {
      "type": "uint24",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint24",
    },
    {
      "type": "address",
    },
    {
      "debugName": "s.read(getPool)",
      "type": "address",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "address",
    },
    {
      "type": "uint24",
    },
  ],
}
`;

exports[`issue #5 ergonomics > s.fn returns a struct directly — byte-identical IR to .expr(); the result type is the struct 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
  ],
  "body": [
    {
      "args": [
        0,
      ],
      "fn": 0,
      "k": "fncall",
      "outs": [
        5,
      ],
      "site": 3,
    },
    {
      "index": 0,
      "k": "field",
      "out": 6,
      "site": 4,
      "tuple": 5,
    },
    {
      "index": 1,
      "k": "field",
      "out": 7,
      "site": 5,
      "tuple": 5,
    },
  ],
  "cells": [],
  "fns": [
    {
      "body": [
        {
          "args": [],
          "fnAbi": {
            "inputs": [],
            "name": "symbol",
            "outputs": [
              {
                "name": "",
                "type": "string",
              },
            ],
            "selector": "0x95d89b41",
          },
          "k": "call",
          "mode": "strict",
          "outs": [
            2,
          ],
          "site": 0,
          "target": 1,
        },
        {
          "args": [],
          "fnAbi": {
            "inputs": [],
            "name": "decimals",
            "outputs": [
              {
                "name": "",
                "type": "uint8",
              },
            ],
            "selector": "0x313ce567",
          },
          "k": "call",
          "mode": "strict",
          "outs": [
            3,
          ],
          "site": 1,
          "target": 1,
        },
        {
          "inits": [
            {
              "index": 0,
              "value": 2,
            },
            {
              "index": 1,
              "value": 3,
            },
          ],
          "k": "tuplenew",
          "out": 4,
          "site": 2,
        },
      ],
      "name": "getMeta",
      "params": [
        {
          "name": "tok",
          "type": "address",
          "value": 1,
        },
      ],
      "resultValues": [
        4,
      ],
      "results": [
        {
          "type": {
            "components": [
              {
                "name": "symbol",
                "type": "string",
              },
              {
                "name": "decimals",
                "type": "uint8",
              },
            ],
            "type": "tuple",
          },
        },
      ],
    },
  ],
  "irVersion": 1,
  "name": "meta",
  "returns": [
    {
      "name": "symbol",
      "type": "string",
      "value": 6,
    },
    {
      "name": "decimals",
      "type": "uint8",
      "value": 7,
    },
    {
      "name": "meta",
      "type": {
        "components": [
          {
            "name": "symbol",
            "type": "string",
          },
          {
            "name": "decimals",
            "type": "uint8",
          },
        ],
        "type": "tuple",
      },
      "value": 5,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "getMeta(tok)",
      "type": "address",
    },
    {
      "debugName": "s.read(symbol)",
      "type": "string",
    },
    {
      "debugName": "s.read(decimals)",
      "type": "uint8",
    },
    {
      "debugName": "s.tuple(symbol, decimals)",
      "type": {
        "components": [
          {
            "name": "symbol",
            "type": "string",
          },
          {
            "name": "decimals",
            "type": "uint8",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "debugName": "getMeta(…)",
      "type": {
        "components": [
          {
            "name": "symbol",
            "type": "string",
          },
          {
            "name": "decimals",
            "type": "uint8",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "type": "string",
    },
    {
      "type": "uint8",
    },
  ],
}
`;

exports[`issue #5 ergonomics > s.read({ struct: true }) decodes named multi-outputs into one Tuple (tuplenew over outputs) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
  ],
  "body": [
    {
      "args": [],
      "fnAbi": {
        "inputs": [],
        "name": "slot0",
        "outputs": [
          {
            "name": "sqrtPriceX96",
            "type": "uint160",
          },
          {
            "name": "tick",
            "type": "int24",
          },
          {
            "name": "unlocked",
            "type": "bool",
          },
        ],
        "selector": "0x3850c7bd",
      },
      "k": "call",
      "mode": "strict",
      "outs": [
        1,
        2,
        3,
      ],
      "site": 0,
      "target": 0,
    },
    {
      "inits": [
        {
          "index": 0,
          "value": 1,
        },
        {
          "index": 1,
          "value": 2,
        },
        {
          "index": 2,
          "value": 3,
        },
      ],
      "k": "tuplenew",
      "out": 4,
      "site": 1,
    },
    {
      "index": 0,
      "k": "field",
      "out": 5,
      "site": 2,
      "tuple": 4,
    },
    {
      "index": 1,
      "k": "field",
      "out": 6,
      "site": 3,
      "tuple": 4,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "pool",
  "returns": [
    {
      "name": "price",
      "type": "uint160",
      "value": 5,
    },
    {
      "name": "tick",
      "type": "int24",
      "value": 6,
    },
    {
      "name": "slot0",
      "type": {
        "components": [
          {
            "name": "sqrtPriceX96",
            "type": "uint160",
          },
          {
            "name": "tick",
            "type": "int24",
          },
          {
            "name": "unlocked",
            "type": "bool",
          },
        ],
        "type": "tuple",
      },
      "value": 4,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "s.read(slot0)[0]",
      "type": "uint160",
    },
    {
      "debugName": "s.read(slot0)[1]",
      "type": "int24",
    },
    {
      "debugName": "s.read(slot0)[2]",
      "type": "bool",
    },
    {
      "debugName": "s.read(slot0) struct",
      "type": {
        "components": [
          {
            "name": "sqrtPriceX96",
            "type": "uint160",
          },
          {
            "name": "tick",
            "type": "int24",
          },
          {
            "name": "unlocked",
            "type": "bool",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "type": "uint160",
    },
    {
      "type": "int24",
    },
  ],
}
`;

exports[`literals (s.lit + coercion) > IR snapshot (word canonicalization + memref data consts) 1`] = `
{
  "args": [],
  "body": [
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000000fa",
        "kind": "word",
      },
      "k": "const",
      "out": 0,
      "site": 0,
      "type": "uint8",
    },
    {
      "data": {
        "hex": "0xfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffe",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 1,
      "type": "int24",
    },
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000deadbeef",
        "kind": "word",
      },
      "k": "const",
      "out": 2,
      "site": 2,
      "type": "address",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 3,
      "type": "bool",
    },
    {
      "data": {
        "hex": "0x95d89b4100000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 4,
      "site": 4,
      "type": "bytes4",
    },
    {
      "data": {
        "hex": "0x000000000000000000000000000000000000000000000000000000000000000968656c6c6f206576730000000000000000000000000000000000000000000000",
        "kind": "data",
      },
      "k": "const",
      "out": 5,
      "site": 5,
      "type": "string",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000004deadbeef00000000000000000000000000000000000000000000000000000000",
        "kind": "data",
      },
      "k": "const",
      "out": 6,
      "site": 6,
      "type": "bytes",
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000003000000000000000000000000000000000000000000000000000000000000006400000000000000000000000000000000000000000000000000000000000001f40000000000000000000000000000000000000000000000000000000000000bb8",
        "kind": "data",
      },
      "k": "const",
      "out": 7,
      "site": 7,
      "type": "uint24[]",
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "lits",
  "returns": [
    {
      "name": "u8",
      "type": "uint8",
      "value": 0,
    },
    {
      "name": "i24",
      "type": "int24",
      "value": 1,
    },
    {
      "name": "addr",
      "type": "address",
      "value": 2,
    },
    {
      "name": "flag",
      "type": "bool",
      "value": 3,
    },
    {
      "name": "b4",
      "type": "bytes4",
      "value": 4,
    },
    {
      "name": "str",
      "type": "string",
      "value": 5,
    },
    {
      "name": "raw",
      "type": "bytes",
      "value": 6,
    },
    {
      "name": "arr",
      "type": "uint24[]",
      "value": 7,
    },
  ],
  "values": [
    {
      "type": "uint8",
    },
    {
      "type": "int24",
    },
    {
      "type": "address",
    },
    {
      "type": "bool",
    },
    {
      "type": "bytes4",
    },
    {
      "type": "string",
    },
    {
      "type": "bytes",
    },
    {
      "type": "uint24[]",
    },
  ],
}
`;

exports[`named args (namedArg) > s.fn accepts a t.struct param (namedArg and bare): the body gets a Tuple handle 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
    {
      "name": "arg1",
      "type": "uint24",
    },
  ],
  "body": [
    {
      "inits": [
        {
          "index": 0,
          "value": 0,
        },
        {
          "index": 1,
          "value": 1,
        },
      ],
      "k": "tuplenew",
      "out": 6,
      "site": 2,
    },
    {
      "args": [
        6,
      ],
      "fn": 0,
      "k": "fncall",
      "outs": [
        7,
      ],
      "site": 3,
    },
    {
      "args": [
        6,
      ],
      "fn": 1,
      "k": "fncall",
      "outs": [
        8,
      ],
      "site": 4,
    },
  ],
  "cells": [],
  "fns": [
    {
      "body": [
        {
          "index": 1,
          "k": "field",
          "out": 3,
          "site": 0,
          "tuple": 2,
        },
      ],
      "name": "feeOf",
      "params": [
        {
          "name": "pair",
          "type": {
            "components": [
              {
                "name": "token",
                "type": "address",
              },
              {
                "name": "fee",
                "type": "uint24",
              },
            ],
            "type": "tuple",
          },
          "value": 2,
        },
      ],
      "resultValues": [
        3,
      ],
      "results": [
        {
          "type": "uint24",
        },
      ],
    },
    {
      "body": [
        {
          "index": 0,
          "k": "field",
          "out": 5,
          "site": 1,
          "tuple": 4,
        },
      ],
      "name": "tokenOf",
      "params": [
        {
          "name": "arg0",
          "type": {
            "components": [
              {
                "name": "token",
                "type": "address",
              },
              {
                "name": "fee",
                "type": "uint24",
              },
            ],
            "type": "tuple",
          },
          "value": 4,
        },
      ],
      "resultValues": [
        5,
      ],
      "results": [
        {
          "type": "address",
        },
      ],
    },
  ],
  "irVersion": 1,
  "name": "fnc",
  "returns": [
    {
      "name": "fee",
      "type": "uint24",
      "value": 7,
    },
    {
      "name": "token",
      "type": "address",
      "value": 8,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "args.arg1",
      "type": "uint24",
    },
    {
      "debugName": "feeOf(pair)",
      "type": {
        "components": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "fee",
            "type": "uint24",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "type": "uint24",
    },
    {
      "debugName": "tokenOf(arg0)",
      "type": {
        "components": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "fee",
            "type": "uint24",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "type": "address",
    },
    {
      "debugName": "s.tuple(token, fee)",
      "type": {
        "components": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "fee",
            "type": "uint24",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "debugName": "feeOf(…)",
      "type": "uint24",
    },
    {
      "debugName": "tokenOf(…)",
      "type": "address",
    },
  ],
}
`;

exports[`s.call / s.tryCall > IR snapshot (strict + try, literal/expr args, gas, multi-output) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
    {
      "name": "arg1",
      "type": "address",
    },
  ],
  "body": [
    {
      "args": [],
      "fnAbi": {
        "inputs": [],
        "name": "symbol",
        "outputs": [
          {
            "name": "",
            "type": "string",
          },
        ],
        "selector": "0x95d89b41",
      },
      "k": "call",
      "mode": "strict",
      "outs": [
        2,
      ],
      "site": 0,
      "target": 0,
    },
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000186a0",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 1,
      "type": "uint256",
    },
    {
      "args": [
        1,
      ],
      "fnAbi": {
        "inputs": [
          {
            "name": "owner",
            "type": "address",
          },
        ],
        "name": "balanceOf",
        "outputs": [
          {
            "name": "",
            "type": "uint256",
          },
        ],
        "selector": "0x70a08231",
      },
      "gas": 3,
      "k": "call",
      "mode": "strict",
      "outs": [
        4,
      ],
      "site": 2,
      "target": 0,
    },
    {
      "args": [],
      "fnAbi": {
        "inputs": [],
        "name": "slot0",
        "outputs": [
          {
            "name": "sqrtPriceX96",
            "type": "uint160",
          },
          {
            "name": "tick",
            "type": "int24",
          },
          {
            "name": "unlocked",
            "type": "bool",
          },
        ],
        "selector": "0x3850c7bd",
      },
      "k": "call",
      "mode": "strict",
      "outs": [
        5,
        6,
        7,
      ],
      "site": 3,
      "target": 0,
    },
    {
      "args": [],
      "fnAbi": {
        "inputs": [],
        "name": "decimals",
        "outputs": [
          {
            "name": "",
            "type": "uint8",
          },
        ],
        "selector": "0x313ce567",
      },
      "k": "call",
      "mode": "try",
      "outs": [
        8,
      ],
      "site": 4,
      "successOut": 9,
      "target": 0,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000012",
        "kind": "word",
      },
      "k": "const",
      "out": 10,
      "site": 5,
      "type": "uint8",
    },
    {
      "a": 8,
      "b": 10,
      "cond": 9,
      "k": "select",
      "out": 11,
      "site": 6,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "calls",
  "returns": [
    {
      "name": "symbol",
      "type": "string",
      "value": 2,
    },
    {
      "name": "bal",
      "type": "uint256",
      "value": 4,
    },
    {
      "name": "tick",
      "type": "int24",
      "value": 6,
    },
    {
      "name": "decimals",
      "type": "uint8",
      "value": 11,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "args.arg1",
      "type": "address",
    },
    {
      "debugName": "s.read(symbol)",
      "type": "string",
    },
    {
      "type": "uint256",
    },
    {
      "debugName": "s.read(balanceOf)",
      "type": "uint256",
    },
    {
      "debugName": "s.read(slot0)[0]",
      "type": "uint160",
    },
    {
      "debugName": "s.read(slot0)[1]",
      "type": "int24",
    },
    {
      "debugName": "s.read(slot0)[2]",
      "type": "bool",
    },
    {
      "debugName": "s.tryRead(decimals)",
      "type": "uint8",
    },
    {
      "debugName": "s.tryRead(decimals).success",
      "type": "bool",
    },
    {
      "type": "uint8",
    },
    {
      "type": "uint8",
    },
  ],
}
`;

exports[`s.encode / s.encodePacked / s.keccak256 > s.encode records one encode(abi) stmt over the staged values (incl. bare handles) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
    {
      "name": "arg1",
      "type": "string",
    },
    {
      "name": "arg2",
      "type": "uint256[]",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x00000000000000000000000000000000000000000000000000000000000001f4",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 0,
      "type": "uint24",
    },
    {
      "inits": [
        {
          "index": 1,
          "value": 3,
        },
      ],
      "k": "tuplenew",
      "out": 4,
      "site": 1,
    },
    {
      "args": [
        0,
        1,
        2,
        4,
      ],
      "k": "encode",
      "mode": "abi",
      "out": 5,
      "site": 2,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "enc",
  "returns": [
    {
      "name": "out",
      "type": "bytes",
      "value": 5,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "debugName": "args.arg1",
      "type": "string",
    },
    {
      "debugName": "args.arg2",
      "type": "uint256[]",
    },
    {
      "type": "uint24",
    },
    {
      "debugName": "s.tuple(token, fee)",
      "type": {
        "components": [
          {
            "name": "token",
            "type": "address",
          },
          {
            "name": "fee",
            "type": "uint24",
          },
        ],
        "type": "tuple",
      },
    },
    {
      "debugName": "s.encode(…)",
      "type": "bytes",
    },
  ],
}
`;

exports[`s.encode / s.encodePacked / s.keccak256 > s.encodePacked records encode(packed); s.keccak256 standard-encodes then hashes (#24) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
    {
      "name": "arg1",
      "type": "string",
    },
  ],
  "body": [
    {
      "args": [
        0,
        1,
      ],
      "k": "encode",
      "mode": "packed",
      "out": 2,
      "site": 0,
    },
    {
      "args": [
        0,
        1,
      ],
      "k": "encode",
      "mode": "abi",
      "out": 3,
      "site": 1,
    },
    {
      "a": 3,
      "k": "keccak256",
      "out": 4,
      "site": 2,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "hashes",
  "returns": [
    {
      "name": "packed",
      "type": "bytes",
      "value": 2,
    },
    {
      "name": "h",
      "type": "bytes32",
      "value": 4,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "debugName": "args.arg1",
      "type": "string",
    },
    {
      "debugName": "s.encodePacked(…)",
      "type": "bytes",
    },
    {
      "debugName": "s.keccak256(…) encoded bytes",
      "type": "bytes",
    },
    {
      "debugName": "s.keccak256(…)",
      "type": "bytes32",
    },
  ],
}
`;

exports[`s.fn > IR snapshot (fn body recorded once; two fncalls) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
    {
      "name": "arg1",
      "type": "address[]",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 5,
      "site": 1,
      "type": "uint256",
    },
    {
      "arr": 1,
      "i": 5,
      "k": "index",
      "out": 6,
      "site": 2,
    },
    {
      "args": [
        6,
        0,
      ],
      "fn": 0,
      "k": "fncall",
      "outs": [
        7,
      ],
      "site": 3,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "kind": "word",
      },
      "k": "const",
      "out": 8,
      "site": 4,
      "type": "uint256",
    },
    {
      "arr": 1,
      "i": 8,
      "k": "index",
      "out": 9,
      "site": 5,
    },
    {
      "args": [
        9,
        0,
      ],
      "fn": 0,
      "k": "fncall",
      "outs": [
        10,
      ],
      "site": 6,
    },
  ],
  "cells": [],
  "fns": [
    {
      "body": [
        {
          "args": [
            3,
          ],
          "fnAbi": {
            "inputs": [
              {
                "name": "owner",
                "type": "address",
              },
            ],
            "name": "balanceOf",
            "outputs": [
              {
                "name": "",
                "type": "uint256",
              },
            ],
            "selector": "0x70a08231",
          },
          "k": "call",
          "mode": "strict",
          "outs": [
            4,
          ],
          "site": 0,
          "target": 2,
        },
      ],
      "name": "balOf",
      "params": [
        {
          "name": "token",
          "type": "address",
          "value": 2,
        },
        {
          "name": "who",
          "type": "address",
          "value": 3,
        },
      ],
      "resultValues": [
        4,
      ],
      "results": [
        {
          "type": "uint256",
        },
      ],
    },
  ],
  "irVersion": 1,
  "name": "fns",
  "returns": [
    {
      "name": "a",
      "type": "uint256",
      "value": 7,
    },
    {
      "name": "b",
      "type": "uint256",
      "value": 10,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "args.arg1",
      "type": "address[]",
    },
    {
      "debugName": "balOf(token)",
      "type": "address",
    },
    {
      "debugName": "balOf(who)",
      "type": "address",
    },
    {
      "debugName": "s.read(balanceOf)",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "address",
    },
    {
      "debugName": "balOf(…)",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "address",
    },
    {
      "debugName": "balOf(…)",
      "type": "uint256",
    },
  ],
}
`;

exports[`s.for > IR snapshot (sugar over while + an internal cell; step defaults to 1) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 0,
      "type": "uint256",
    },
    {
      "cell": 0,
      "init": 1,
      "k": "cellnew",
      "site": 1,
    },
    {
      "cell": 1,
      "init": 1,
      "k": "cellnew",
      "site": 2,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "kind": "word",
      },
      "k": "const",
      "out": 2,
      "site": 3,
      "type": "uint256",
    },
    {
      "body": [
        {
          "cell": 0,
          "k": "cellget",
          "out": 5,
          "site": 6,
        },
        {
          "a": 5,
          "b": 3,
          "k": "bin",
          "op": "add",
          "out": 6,
          "site": 7,
        },
        {
          "cell": 0,
          "k": "cellset",
          "site": 8,
          "value": 6,
        },
        {
          "cell": 1,
          "k": "cellget",
          "out": 7,
          "site": 9,
        },
        {
          "a": 7,
          "b": 2,
          "k": "bin",
          "op": "add",
          "out": 8,
          "site": 10,
        },
        {
          "cell": 1,
          "k": "cellset",
          "site": 11,
          "value": 8,
        },
      ],
      "cond": 4,
      "header": [
        {
          "cell": 1,
          "k": "cellget",
          "out": 3,
          "site": 4,
        },
        {
          "a": 3,
          "b": 0,
          "k": "bin",
          "op": "lt",
          "out": 4,
          "site": 5,
        },
      ],
      "k": "while",
      "site": 12,
    },
    {
      "cell": 0,
      "k": "cellget",
      "out": 9,
      "site": 13,
    },
  ],
  "cells": [
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
  "fns": [],
  "irVersion": 1,
  "name": "fored",
  "returns": [
    {
      "name": "acc",
      "type": "uint256",
      "value": 9,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`s.forEach > IR snapshot (one len snapshot before the loop; index per iteration; step tail) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256[]",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 0,
      "type": "uint256",
    },
    {
      "cell": 0,
      "init": 1,
      "k": "cellnew",
      "site": 1,
    },
    {
      "a": 0,
      "k": "len",
      "out": 2,
      "site": 2,
    },
    {
      "cell": 1,
      "init": 1,
      "k": "cellnew",
      "site": 3,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
        "kind": "word",
      },
      "k": "const",
      "out": 3,
      "site": 4,
      "type": "uint256",
    },
    {
      "body": [
        {
          "arr": 0,
          "i": 4,
          "k": "index",
          "out": 6,
          "site": 7,
        },
        {
          "cell": 0,
          "k": "cellget",
          "out": 7,
          "site": 8,
        },
        {
          "a": 7,
          "b": 6,
          "k": "bin",
          "op": "add",
          "out": 8,
          "site": 9,
        },
        {
          "a": 8,
          "b": 4,
          "k": "bin",
          "op": "add",
          "out": 9,
          "site": 10,
        },
        {
          "cell": 0,
          "k": "cellset",
          "site": 11,
          "value": 9,
        },
        {
          "cell": 1,
          "k": "cellget",
          "out": 10,
          "site": 12,
        },
        {
          "a": 10,
          "b": 3,
          "k": "bin",
          "op": "add",
          "out": 11,
          "site": 13,
        },
        {
          "cell": 1,
          "k": "cellset",
          "site": 14,
          "value": 11,
        },
      ],
      "cond": 5,
      "header": [
        {
          "cell": 1,
          "k": "cellget",
          "out": 4,
          "site": 5,
        },
        {
          "a": 4,
          "b": 2,
          "k": "bin",
          "op": "lt",
          "out": 5,
          "site": 6,
        },
      ],
      "k": "while",
      "site": 15,
    },
    {
      "cell": 0,
      "k": "cellget",
      "out": 12,
      "site": 16,
    },
  ],
  "cells": [
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
  "fns": [],
  "irVersion": 1,
  "name": "summed",
  "returns": [
    {
      "name": "total",
      "type": "uint256",
      "value": 12,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256[]",
    },
    {
      "type": "uint256",
    },
    {
      "debugName": "s.forEach(…) length",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "debugName": "s.forEach(…) element",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`s.if > IR snapshot (cond evaluated once, before the branches; empty else) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 0,
      "type": "bool",
    },
    {
      "cell": 0,
      "init": 1,
      "k": "cellnew",
      "site": 1,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000064",
        "kind": "word",
      },
      "k": "const",
      "out": 2,
      "site": 2,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 2,
      "k": "bin",
      "op": "gt",
      "out": 3,
      "site": 3,
    },
    {
      "cond": 3,
      "else": [
        {
          "cell": 0,
          "k": "cellset",
          "site": 6,
          "value": 1,
        },
      ],
      "k": "if",
      "site": 7,
      "then": [
        {
          "data": {
            "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
            "kind": "word",
          },
          "k": "const",
          "out": 4,
          "site": 4,
          "type": "bool",
        },
        {
          "cell": 0,
          "k": "cellset",
          "site": 5,
          "value": 4,
        },
      ],
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 5,
      "site": 8,
      "type": "uint256",
    },
    {
      "a": 0,
      "b": 5,
      "k": "bin",
      "op": "eq",
      "out": 6,
      "site": 9,
    },
    {
      "cond": 6,
      "else": [],
      "k": "if",
      "site": 11,
      "then": [
        {
          "cell": 0,
          "k": "cellset",
          "site": 10,
          "value": 1,
        },
      ],
    },
    {
      "cell": 0,
      "k": "cellget",
      "out": 7,
      "site": 12,
    },
  ],
  "cells": [
    {
      "type": "bool",
    },
  ],
  "fns": [],
  "irVersion": 1,
  "name": "iffy",
  "returns": [
    {
      "name": "big",
      "type": "bool",
      "value": 7,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "bool",
    },
  ],
}
`;

exports[`s.select > IR snapshot (eager both sides) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "bool",
    },
    {
      "name": "arg1",
      "type": "uint256",
    },
    {
      "name": "arg2",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "a": 1,
      "b": 2,
      "cond": 0,
      "k": "select",
      "out": 3,
      "site": 0,
    },
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 4,
      "site": 1,
      "type": "uint256",
    },
    {
      "a": 1,
      "b": 4,
      "cond": 0,
      "k": "select",
      "out": 5,
      "site": 2,
    },
  ],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "sel",
  "returns": [
    {
      "name": "picked",
      "type": "uint256",
      "value": 3,
    },
    {
      "name": "defaulted",
      "type": "uint256",
      "value": 5,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "bool",
    },
    {
      "debugName": "args.arg1",
      "type": "uint256",
    },
    {
      "debugName": "args.arg2",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`s.while > IR snapshot (header block + cond + body with break/continue) 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "uint256",
    },
  ],
  "body": [
    {
      "data": {
        "hex": "0x0000000000000000000000000000000000000000000000000000000000000000",
        "kind": "word",
      },
      "k": "const",
      "out": 1,
      "site": 0,
      "type": "uint256",
    },
    {
      "cell": 0,
      "init": 1,
      "k": "cellnew",
      "site": 1,
    },
    {
      "cell": 1,
      "init": 1,
      "k": "cellnew",
      "site": 2,
    },
    {
      "body": [
        {
          "cell": 1,
          "k": "cellget",
          "out": 4,
          "site": 5,
        },
        {
          "data": {
            "hex": "0x0000000000000000000000000000000000000000000000000000000000000007",
            "kind": "word",
          },
          "k": "const",
          "out": 5,
          "site": 6,
          "type": "uint256",
        },
        {
          "a": 4,
          "b": 5,
          "k": "bin",
          "op": "eq",
          "out": 6,
          "site": 7,
        },
        {
          "cond": 6,
          "else": [],
          "k": "if",
          "site": 9,
          "then": [
            {
              "k": "break",
              "site": 8,
            },
          ],
        },
        {
          "cell": 1,
          "k": "cellget",
          "out": 7,
          "site": 10,
        },
        {
          "data": {
            "hex": "0x0000000000000000000000000000000000000000000000000000000000000003",
            "kind": "word",
          },
          "k": "const",
          "out": 8,
          "site": 11,
          "type": "uint256",
        },
        {
          "a": 7,
          "b": 8,
          "k": "bin",
          "op": "eq",
          "out": 9,
          "site": 12,
        },
        {
          "cond": 9,
          "else": [],
          "k": "if",
          "site": 14,
          "then": [
            {
              "k": "continue",
              "site": 13,
            },
          ],
        },
        {
          "cell": 0,
          "k": "cellget",
          "out": 10,
          "site": 15,
        },
        {
          "cell": 1,
          "k": "cellget",
          "out": 11,
          "site": 16,
        },
        {
          "a": 10,
          "b": 11,
          "k": "bin",
          "op": "add",
          "out": 12,
          "site": 17,
        },
        {
          "cell": 0,
          "k": "cellset",
          "site": 18,
          "value": 12,
        },
        {
          "cell": 1,
          "k": "cellget",
          "out": 13,
          "site": 19,
        },
        {
          "data": {
            "hex": "0x0000000000000000000000000000000000000000000000000000000000000001",
            "kind": "word",
          },
          "k": "const",
          "out": 14,
          "site": 20,
          "type": "uint256",
        },
        {
          "a": 13,
          "b": 14,
          "k": "bin",
          "op": "add",
          "out": 15,
          "site": 21,
        },
        {
          "cell": 1,
          "k": "cellset",
          "site": 22,
          "value": 15,
        },
      ],
      "cond": 3,
      "header": [
        {
          "cell": 1,
          "k": "cellget",
          "out": 2,
          "site": 3,
        },
        {
          "a": 2,
          "b": 0,
          "k": "bin",
          "op": "lt",
          "out": 3,
          "site": 4,
        },
      ],
      "k": "while",
      "site": 23,
    },
    {
      "cell": 0,
      "k": "cellget",
      "out": 16,
      "site": 24,
    },
  ],
  "cells": [
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
  "fns": [],
  "irVersion": 1,
  "name": "looped",
  "returns": [
    {
      "name": "total",
      "type": "uint256",
      "value": 16,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "bool",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
    {
      "type": "uint256",
    },
  ],
}
`;

exports[`script shell > IR snapshot 1`] = `
{
  "args": [
    {
      "name": "arg0",
      "type": "address",
    },
    {
      "name": "arg1",
      "type": "uint256",
    },
  ],
  "body": [],
  "cells": [],
  "fns": [],
  "irVersion": 1,
  "name": "shell",
  "returns": [
    {
      "name": "pool",
      "type": "address",
      "value": 0,
    },
    {
      "name": "n",
      "type": "uint256",
      "value": 1,
    },
  ],
  "values": [
    {
      "debugName": "args.arg0",
      "type": "address",
    },
    {
      "debugName": "args.arg1",
      "type": "uint256",
    },
  ],
}
`;
